# Eagle_Engine

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  main.cpp
.github/workflows/: c-cpp.yml  clang-format.yml  cmake.yml  eagle_build.yml  eagle_ubuntu.yml  eagle_windows.yml
Eagle/: CMakeLists.txt
Eagle/src/: Eagle.h  main.cpp  main.h  openglError.h  pch.h  shader.cpp  shader.h  t1.cpp  t1.h
Eagle/src/Core/: Application.cpp  Application.h  Core.h  EntryPoint.h  IRenderable.h  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  Shader.h  Window.h
Eagle/src/Core/Events/: ApplicationEvent.h  Event.h  KeyboardEvent.h  MouseEvent.h
Eagle/src/Core/ImGui/: ImGuiLayer.cpp  ImGuiLayer.h
Eagle/src/Core/Primitives/: .clang-format  BasicTriangle.h  Mesh.cpp  Mesh.h
Eagle/src/Core/Renderer/: IRenderable.h  OpenGLRenderer.cpp  OpenGLRenderer.h  Renderer.cpp  Renderer.h
Eagle/src/Platform/OpenGL/: OpenGLRenderer.cpp  OpenGLRenderer.h  OpenGLWindow.cpp  OpenGLWindow.h
Eagle/src/Platform/Vulkan/: VulkanWindow.cpp  VulkanWindow.h
Eagle/src/Utils/: Singleton.h
Eagle/src/debug_new/: debug_new.h
Eagle/src/shaders/: defaultFrag.glsl  defaultVert.glsl
Sandbox/: CMakeLists.txt
Sandbox/src/: Sandbox.cpp  Sandbox.h  main.cpp
Sandbox/src/shaders/: frag.glsl
Test/tests/: test_memory.cpp
modules/glad/: CMakeLists.txt
modules/glad/include/glad/: gl.h  vulkan.h  wgl.h
modules/vulkan/Lib/: SPIRV-Tools-opt.lib  shaderc_combined.lib
src/: main.cpp  openglError.h  shader.cpp  shader.h  t1.cpp  t1.h
src/debug_new/: debug_new.h  memTest.cpp
tests/: memory_test.cpp  test_memory.cpp
